--- a/_config.yml
+++ b/_config.yml
@@ -10,13 +10,13 @@ site-twitter: #if your site has a twitter account, enter it here
 
 # Author Settings
 author: DeafHong # add your name
-author-img: david-freeman.jpg # add your photo
+author-img: deafhong.jpg # add your photo
 about-author: I am a Front-End developer focusing on front-end development. Always hungry to keep learning. # add description
 social-twitter: # add your Twitter handle
 social-facebook: # add your Facebook handle
-social-github: artemsheludko # add your Github handle
+social-github: deafhong # add your Github handle
 social-linkedin: # add your Linkedin handle
-social-email: # add your Email address
+social-email: # deafjwhong86@gmail.com
 
 # Disqus
 discus-identifier: mr-brown # add your discus identifier
